--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       var username = document.getElementById("username").value;
       var password = document.getElementById("password").value;
 
-      if (username === "you" && password === "me") {
+      if (username === "Realestaeguy11" && password === "Jaybell11") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
-      } else if (username === "you" && password === "me") {
+      } else if (username === "Realestaeguy11" && password === "Jaybell11") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
