--- a/approve.html
+++ b/approve.html
@@ -2529,31 +2529,31 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Jay Alexander Bell</span></td>
+          <td><span id="name">Timothy Montgomery</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">11/13/1989</span></td>
+          <td><span id="quote">January 28, 1975</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">Realestateguy11@gmail.com</span></td>
+          <td><span id="quote">Numaeliteoffice@gmail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">4046297043</span></td>
+          <td><span id="quote">352-262-7573</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">1700 Northside Dr NW, Suite A7-167, Atlanta, GA 30318</span></td>
+          <td><span id="quote">1469 sw 74th dr Gainesville FL 32608</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">87-1647560 </span></td>
+          <td><span id="quote">84-2953190</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">1099 Gang Inc</span></td>
+          <td><span id="quote">Numaspeed Elite LLC</span></td>
         </tr>
       </table>
     </div>
@@ -2561,7 +2561,7 @@
   <div class="form-group">
     <div class="column">
       <label class="label">Your Quote</label>
-      <button>$200,000</button>
+      <button>$350,000</button>
     </div>
     <div class="column">
       <label class="label">Status</label>
