--- a/withdrawal.html
+++ b/withdrawal.html
@@ -2419,19 +2419,19 @@
     <table>
       <tr>
         <th>Name</th>
-        <td>Jay Alexander Bell</td>
+        <td>Timothy Montgomery</td>
       </tr>
       <tr>
         <th>Business Name</th>
-        <td>1099 Gang Inc</td>
+        <td>Numaspeed Elite LLC</td>
       </tr>
       <tr>
         <th>Address</th>
-        <td>1700 Northside Dr NW, Suite A7-167, Atlanta, GA 30318</td>
+        <td>1469 SW 74th dr Gainesville FL 32608</td>
       </tr>
       <tr>
         <th>Phone number</th>
-        <td>4046297043</td>
+        <td>352-262-7573</td>
       </tr>
     </table>
   
