--- a/approve.html
+++ b/approve.html
@@ -2529,31 +2529,31 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Timothy Montgomery</span></td>
+          <td><span id="name">Mary Scott</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">January 28, 1975</span></td>
+          <td><span id="quote">December 3, 1986</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">Numaeliteoffice@gmail.com</span></td>
+          <td><span id="quote">mscott843@gmail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">352-262-7573</span></td>
+          <td><span id="quote">(803)-842-5205</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">1469 sw 74th dr Gainesville FL 32608</span></td>
+          <td><span id="quote">308 Crabapple Circle Port Wentworth GA 31407</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">84-2953190</span></td>
+          <td><span id="quote">99-0745501</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">Numaspeed Elite LLC</span></td>
+          <td><span id="quote">J&M Staffing Company LLC</span></td>
         </tr>
       </table>
     </div>
@@ -2561,7 +2561,7 @@
   <div class="form-group">
     <div class="column">
       <label class="label">Your Quote</label>
-      <button>$350,000</button>
+      <button>$200,000</button>
     </div>
     <div class="column">
       <label class="label">Status</label>
