--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       var username = document.getElementById("username").value;
       var password = document.getElementById("password").value;
 
-      if (username === "Numaeliteoffice@gmail.com" && password === "Numaelite12") {
+      if (username === "mscott843@gmail.com" && password === "Mscott@1986") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
