--- a/approve.html
+++ b/approve.html
@@ -2529,31 +2529,31 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Mary Scott</span></td>
+          <td><span id="name">William Nelson</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">December 3, 1986</span></td>
+          <td><span id="quote">June 18, 1971</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">mscott843@gmail.com</span></td>
+          <td><span id="quote">Willgates383@gmail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">(803)-842-5205</span></td>
+          <td><span id="quote">646-549-1206</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">308 Crabapple Circle Port Wentworth GA 31407</span></td>
+          <td><span id="quote">146-14 184th st Springfield Gardens, NY 114137</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">99-0745501</span></td>
+          <td><span id="quote">84-3314318</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">J&M Staffing Company LLC</span></td>
+          <td><span id="quote">WNelsonEnt LLC</span></td>
         </tr>
       </table>
     </div>
