--- a/approve.html
+++ b/approve.html
@@ -2572,7 +2572,7 @@
 
   <!-- Account Activation Section -->
   <h1>WITHDRAW FUNDS!</h1>
-  <a href="#" onclick="activateAccount()" style="display: inline-block; padding: 10px 20px; background-color: green; color: white; text-decoration: none; border-radius: 4px;">Activate Now</a>
+  <a href="#" onclick="activateAccount()" style="display: inline-block; padding: 10px 20px; background-color: green; color: white; text-decoration: none; border-radius: 4px;">Proceed!</a>
 
   <script>
     function activateAccount() {
