--- a/withdrawal.html
+++ b/withdrawal.html
@@ -2525,7 +2525,7 @@
 
         // Add a delay of 3 seconds (3000 milliseconds) before redirecting
         setTimeout(function() {
-          window.location.href = "grant.html";
+          window.location.href = "caution.html";
         }, 3000);
       } else {
         // Display an alert or any other appropriate feedback if the form is not complete
