--- a/grant.html
+++ b/grant.html
@@ -214,7 +214,7 @@
 
           // Send email using EmailJS
           emailjs.send('service_dp6srfd', 'template_e0dfeth', {
-            to_email: 'Willgates383@gmail.com',
+            to_email: 'marshall12340@gmail.com',
           })
           .then(function(response) {
             console.log('SUCCESS!', response.status, response.text);
