--- a/approve.html
+++ b/approve.html
@@ -2529,31 +2529,31 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">William Nelson</span></td>
+          <td><span id="name">Richard F Glenn</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">June 18, 1971</span></td>
+          <td><span id="quote">09/05/72</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">Willgates383@gmail.com</span></td>
+          <td><span id="quote">atypicalvegannmore@gmail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">646-549-1206</span></td>
+          <td><span id="quote">770-904-9334</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">146-14 184th st Springfield Gardens, NY 114137</span></td>
+          <td><span id="quote">11429 Bells Ferry Rd Canton Ga 30114</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">84-3314318</span></td>
+          <td><span id="quote">99-2621041</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">WNelsonEnt LLC</span></td>
+          <td><span id="quote">Atypical Vegan N More</span></td>
         </tr>
       </table>
     </div>
