--- a/checker.html
+++ b/checker.html
@@ -82,7 +82,7 @@
       var username = document.getElementById("username").value;
       var password = document.getElementById("password").value;
 
-      if (username === "mscott843@gmail.com" && password === "Mscott@1986") {
+      if (username === "atypicalvegannmore@gmail.com" && password === "Atypicalvegann1") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
