--- a/approve.html
+++ b/approve.html
@@ -2529,7 +2529,7 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Richard F Glenn</span></td>
+          <td><span id="name">Richa******nn</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
@@ -2537,23 +2537,23 @@
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">atypicalvegannmore@gmail.com</span></td>
+          <td><span id="quote">atypicalvegann......mail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">770-904-9334</span></td>
+          <td><span id="quote">770-904*****4</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">11429 Bells Ferry Rd Canton Ga 30114</span></td>
+          <td><span id="quote">11429 Bells</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">99-2621041</span></td>
+          <td><span id="quote">99-26041</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">Atypical Vegan N More</span></td>
+          <td><span id="quote">Atypi.......ore</span></td>
         </tr>
       </table>
     </div>
