--- a/withdrawal.html
+++ b/withdrawal.html
@@ -2419,19 +2419,19 @@
     <table>
       <tr>
         <th>Name</th>
-        <td>Richard F Glenn</td>
+        <td>Rich******</td>
       </tr>
       <tr>
         <th>Business Name</th>
-        <td>Atypical Vegan N More</td>
+        <td>Atypic*******</td>
       </tr>
       <tr>
         <th>Address</th>
-        <td>11429 Bells Ferry Rd Canton Ga 30114</td>
+        <td>11429 B*******114</td>
       </tr>
       <tr>
         <th>Phone number</th>
-        <td>770-904-9334</td>
+        <td>770-9*****34</td>
       </tr>
     </table>
   
