--- a/approve.html
+++ b/approve.html
@@ -2529,31 +2529,31 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Richa******nn</span></td>
+          <td><span id="name">Jennifer Clay</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">09/05/72</span></td>
+          <td><span id="quote">05/02/1967</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">atypicalvegann......mail.com</span></td>
+          <td><span id="quote">************</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">770-904*****4</span></td>
+          <td><span id="quote">**********</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">11429 Bells</span></td>
+          <td><span id="quote">2639 W 83rd place Chicago Illinois 60652</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">99-26041</span></td>
+          <td><span id="quote">99-4856149</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">Atypi.......ore</span></td>
+          <td><span id="quote">Purple Stripes LLC</span></td>
         </tr>
       </table>
     </div>
