--- a/approve.html
+++ b/approve.html
@@ -2537,11 +2537,11 @@
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">************</span></td>
+          <td><span id="quote">jclay7369@gmail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">**********</span></td>
+          <td><span id="quote"></span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
