--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       var username = document.getElementById("username").value;
       var password = document.getElementById("password").value;
 
-      if (username === "atypicalvegannmore@gmail.com" && password === "Atypicalvegann1") {
+      if (username === "jclay7369@gmail.com" && password === "Jclay@7369") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
