--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
-      } else if (username === "you" && password === "me") {
+      } else if (username === "you2" && password === "me") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
