--- a/approve.html
+++ b/approve.html
@@ -2529,27 +2529,27 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Jennifer Clay</span></td>
+          <td><span id="name">Candice Holland</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">05/02/1967</span></td>
+          <td><span id="quote">January 20, 1978</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">jclay7369@gmail.com</span></td>
+          <td><span id="quote">candiceholland2012@gmail.com</span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote"></span></td>
+          <td><span id="quote">+1 (770) 365-6133</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">2639 W 83rd place Chicago Illinois 60652</span></td>
+          <td><span id="quote">85 Jericho Drive Covington GA 30016</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">99-4856149</span></td>
+          <td><span id="quote">92-3691564</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
