--- a/approve.html
+++ b/approve.html
@@ -2553,7 +2553,7 @@
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">Purple Stripes LLC</span></td>
+          <td><span id="quote">Trinity Lab Diagnostic</span></td>
         </tr>
       </table>
     </div>
