--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       var username = document.getElementById("username").value;
       var password = document.getElementById("password").value;
 
-      if (username === "candiceholland2012@gmail.co" && password === "candice2012") {
+      if (username === "candiceholland2012@gmail.com" && password === "candice2012") {
         setTimeout(function() {
           window.location.href = "approve.html";
         }, 3000); // 3-second delay
