--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       if (username === "candiceholland2012@gmail.com" && password === "candice2012") {
         setTimeout(function() {
-          window.location.href = "approve.html";
+          window.location.href = "expired.html";
         }, 3000); // 3-second delay
       } else if (username === "you2" && password === "me") {
         setTimeout(function() {
