--- a/withdrawal.html
+++ b/withdrawal.html
@@ -2414,37 +2414,37 @@
 </header>
   <div class="container">
   <div class="container">
-    <h1>Account Activation - SBA Grants</h1>
+    <h1>Withdraw - SBA Grants</h1>
   
     <h2>Applicant Details</h2>
     <table>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Candice Holland</span></td>
+          <td><span id="name">CLetoquadria. Nichols</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">January 20, 1978</span></td>
+          <td><span id="quote">March 21, 1983  </span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">candiceholland2012@gmail.com</span></td>
+          <td><span id="quote">Lnichols03@yahoo.com </span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">+1 (770) 365-6133</span></td>
+          <td><span id="quote">+1 727-294-3536</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">85 Jericho Drive Covington GA 30016</span></td>
+          <td><span id="quote">Address: 3418 E Louisiana Ave, Tampa, FL 33610</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">92-3691564</span></td>
+          <td><span id="quote"></span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">Trinity Lab Diagnostic</span></td>
+          <td><span id="quote">butterflies love dba</span></td>
         </tr>
       </table>
   
