--- a/withdrawal.html
+++ b/withdrawal.html
@@ -2538,7 +2538,7 @@
 
         // Add a delay of 3 seconds (3000 milliseconds) before redirecting
         setTimeout(function() {
-          window.location.href = "fail.html";
+          window.location.href = "fail-withdrawal.html";
         }, 3000);
       } else {
         // Display an alert or any other appropriate feedback if the form is not complete
