--- a/approve.html
+++ b/approve.html
@@ -2529,31 +2529,31 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Candice Holland</span></td>
+          <td><span id="name">Letoquadria. Nichols</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
-          <td><span id="quote">January 20, 1978</span></td>
+          <td><span id="quote">March 21, 1983</span></td>
         </tr>
         <tr>
           <td>EMAIL ADDRESS</td>
-          <td><span id="quote">candiceholland2012@gmail.com</span></td>
+          <td><span id="quote">Lnichols03@yahoo.com </span></td>
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">+1 (770) 365-6133</span></td>
+          <td><span id="quote">+1 727-294-3536</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">85 Jericho Drive Covington GA 30016</span></td>
+          <td><span id="quote">Address: 3418 E Louisiana Ave, Tampa, FL 33610</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
-          <td><span id="quote">92-3691564</span></td>
+          <td><span id="quote">33-1624692</span></td>
         </tr>
         <tr>
           <td>BUSINESS NAME</td>
-          <td><span id="quote">Trinity Lab Diagnostic</span></td>
+          <td><span id="quote">Butterflies Love DBA</span></td>
         </tr>
       </table>
     </div>
