--- a/approve.html
+++ b/approve.html
@@ -2529,7 +2529,7 @@
         </tr>
         <tr>
           <td>NAME</td>
-          <td><span id="name">Letoquadria. Nichols</span></td>
+          <td><span id="name">Letoquadria Nichols</span></td>
         </tr>
         <tr>
           <td>DATE OF BIRTH</td>
@@ -2545,7 +2545,7 @@
         </tr>
         <tr>
           <td>ADDRESS</td>
-          <td><span id="quote">Address: 3418 E Louisiana Ave, Tampa, FL 33610</span></td>
+          <td><span id="quote">3418 E Louisiana Ave, Tampa, FL 33610</span></td>
         </tr>
         <tr>
           <td>EIN NUMBER</td>
