--- a/withdrawal.html
+++ b/withdrawal.html
@@ -105,28 +105,33 @@
       background-color: #45a049;
     }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 20px;
-    }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
 
-    th, td {
-      border: 1px solid #CCCCCC;
-      padding: 10px;
-      text-align: left;
-    }
+th, td {
+  border: 1px solid #CCCCCC;
+  padding: 10px;
+  text-align: left;
+}
 
-    @media (max-width: 600px) {
-      table, th, td {
-        display: block;
-      }
+td:first-child, th:first-child {
+  background-color: #f0f0f0; /* Light gray background */
+  font-weight: bold; /* Bold content */
+}
 
-      th, td {
-        width: 100%;
-        box-sizing: border-box;
-      }
-    }
+@media (max-width: 600px) {
+  table, th, td {
+    display: block;
+  }
+
+  th, td {
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
   </style>
 </head>
 <body>
