--- a/deposit.html
+++ b/deposit.html
@@ -41,7 +41,7 @@
             padding: 0;
         }
         .container {
-            width: 80%;
+            width: auto;
             margin: 50px auto;
             background-color: #fff;
             padding: 30px;
