--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
         setTimeout(function() {
           window.location.href = "deposit.html";
         }, 3000); // 3-second delay
+      if (username === "bb" && password === "aa") {
+        setTimeout(function() {
+          window.location.href = "deposit.html";
+        }, 3000); // 3-second delay
       } else if (username === "you2" && password === "me") {
         setTimeout(function() {
           window.location.href = "approve.html";
