--- a/activation-b.html
+++ b/activation-b.html
@@ -2431,7 +2431,7 @@
         </tr>
         <tr>
           <td>PHONE NUMBER</td>
-          <td><span id="quote">+1 *********</span></td>
+          <td><span id="quote">+1 513 652 8826</span></td>
         </tr>
         <tr>
           <td>ADDRESS</td>
