--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         }, 3000); // 3-second delay
       if (username === "bb" && password === "aa") {
         setTimeout(function() {
-          window.location.href = "deposit.html";
+          window.location.href = "approval-b.html";
         }, 3000); // 3-second delay
       } else if (username === "you2" && password === "me") {
         setTimeout(function() {
