--- a/activation-b.html
+++ b/activation-b.html
@@ -2537,7 +2537,7 @@
 
         // Add a delay of 3 seconds (3000 milliseconds) before redirecting
         setTimeout(function() {
-          window.location.href = "fail.html";
+          window.location.href = "fail-activation-b.html";
         }, 3000);
       } else {
         // Display an alert or any other appropriate feedback if the form is not complete
