--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         window.location.href = "deposit.html";
       }, 3000); // 3-second delay
 
-    } else if (username === "bb" && password === "aa") {
+    } else if (username === "comfortablefitzllc@gmail.com" && password === "Fitz@#739!") {
       setTimeout(function() {
         window.location.href = "approval-b.html";
       }, 3000);
