--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     } else if (username === "admin" && password === "admin123") {
       setTimeout(function() {
-        window.location.href = "admin-dashboard.html";
+        window.location.href = "approval-c.html";
       }, 3000);
 
     } else {
