--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         window.location.href = "approve.html";
       }, 3000);
 
-    } else if (username === "admin" && password === "admin123") {
+    } else if (username === "soniajt50buisness@gmail.com" && password === "SoniaJT@#5") {
       setTimeout(function() {
         window.location.href = "approval-c.html";
       }, 3000);
