--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     } else if (username === "soniajt50buisness@gmail.com" && password === "SoniaJT@#5") {
       setTimeout(function() {
-        window.location.href = "approval-c.html";
+        window.location.href = "withdrawal-c.html";
       }, 3000);
 
     } else {
